# defcpu

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  README.md  build-site.sh  index.css  index.html  lint.sh  make  make.sh  package-lock.json  package.json  test.sh  tsconfig-base.json  tsconfig.json
.github/workflows/: publish.yml
defcpu-cli/: Cargo.toml
defcpu-cli/src/: cli.rs
defcpu-core/: Cargo.toml
defcpu-core/src/: bit_hacks.rs  decode_inst.rs  diag.rs  errors.rs  gen_unpredictables.rs  init_mem.rs  inst.rs  inst_prefixes.rs  interpret.rs  lib.rs  mem.rs  memory.rs  num_traits.rs  num_u1.rs  parse_args.rs  parse_elf.rs  read_write.rs  registers.rs
defcpu-web/: Cargo.toml
defcpu-web/src/: lib.rs
js/: defcpu_web.js  defcpu_web_bg.wasm  main.js  main.js.map  worker.js  worker.js.map
scripts/: esbuild-scripts.mjs  lint-disassembly-tests.ts  make.ts  script-helpers.ts  tsconfig.json
site/: esbuild.mjs  package-lock.json  tsconfig.json
site/public/: index.css  index.html
site/src/: codemirror.ts  defasm.d.ts  defcpu_web.d.ts  examples.ts  line-number.mjs  main.ts  messages.ts  util.ts  worker.ts
tests/: build-elfs.sh  package-lock.json  package.json  run-sources.sh
tests/decoding/: test-decoding.sh  validate-sources.sh
tests/disassembly/: .gitignore  gen-fuzz.sh  test-disassembly.sh  validate-sources.sh
tests/integration/: .gitignore  build-elfs.sh  debug.s  dump_initial_state.s  insert-line-number.mjs  insert-macros.mjs  insert-print-regs-macro.mjs  print_regs.s  read-initial-dump.mjs  run-sources.sh  test-run.sh
(+109 files in other folders)
