[package]
name = "defcpu_cli"
version = "0.1.0"
edition = "2021"
authors = ["Jared Hughes <jahughes241@gmail.com>"]
description = """
A silly CPU simulator.
"""
documentation = "https://github.com/jared-hughes/defcpu"
homepage = "https://github.com/jared-hughes/defcpu"
repository = "https://github.com/jared-hughes/defcpu"
license = "MIT"
categories = ["compilers", "simulation", "command-line-utilities"]

[[bin]]
bench = false
path = "src/cli.rs"
name = "defcpu"

[dependencies]
structopt = { version = "0.3", default-features = false }
hex = { version = "0.4" }

[dependencies.defcpu_core]
path = "../defcpu-core"
version = "0.1.0"
